sterlang/examples/neg/src/n02.erlt
-module(n02).
-export([inferred_funs/0]).

%% circularity
f(_) -> f(fun f/1).

-spec inferred_funs() -> [term()].
[unchecked]
inferred_funs() -> [
    fun f/1
].
